k8s/practice_learning/a.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: dev
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx-container
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: dev
  labels:
    app: nginx-app
spec:
  replicas: 3
  selector:
    matchLabesl:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:   
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        startupProbe:
          httGet:
            path: /
            port: 80
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: nginx-storage
          mountPath: /usr/share/nginx/uploads
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-configmap
      - name: nginx-storage
        persisitentVolumeClaim:
          ClaimName: nginx-pvc
---
apiVersion: v1
kind: Service
metdata:
  name: nginx-service
  namespace: dev
  labesl:
    app: nginx-app
spce:
  type: ClusterIP
  selector:
    app: nginx-pp
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metdata:
  name: nginx-ingress
  namespace: dev
  labesl:
    app: nginx-app
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadta:
  name: nginx-statefulset
spec:
  serviceName: nginx-service
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-container
        image: nginx
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemonset

spec:
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-container
        image: nginx-app
---
