k8s/practice_learning/b.yml
---
apiVersion: v1
kind: Namespace

metadata: 
  name: dev

---
apiVersion: v1
kind: Pod

metadata:
  name: nginx-pod
  namespace: dev
  labels:
    app: nginx-app

spec:
  containers:
  - name: nginx-container
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment
  namespace: dev
  labels:
    app: nginx-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80

        startupProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80   
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe: 
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5

        resources:
          requests:
            cpu: "100m" 
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: nginx-storage
          mountPath: /usr/share/nginx/uploads
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-configmap
      - name: nginx-storage
        persistentVolumeClaim:
          claimName: nginx-pvc            

---
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  namespace: dev
  labels:
    app: nginx-app

spec:
  type: ClusterIP
  selector:
    app: nginx-app

  ports:
  - port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress
  namespace: dev
  labels:
    app: nginx-app
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

---
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: nginx-stateful
  namespace: dev

spec:
  serviceName: nginx-service

  replicas: 2

  selector:
    matchLabels:
      app: nginx-app

  template:
    metadata:
      labels:
        app: nginx-app

    spec:
      containers:
      - name: nginx-container
        image: nginx
---
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: nginx-daemonset
  namespace: dev

spec:
  selector:
    matchLabels:
      app: nginx-app

  template:
    metadata:
      labels:
        app: nginx-app

    spec:
      containers:
      - name: nginx-container
        image: nginx
---
kubectl taint nodes controlplane app=dev:NoSchedule

---
apiVersion: v1
kind: Pod

metadata:
  name: nginx-pod

spec:
  tolerations:
  - key: "app"
    operator: "Equal"
    value: "dev"
    effect: "NoSchedule"

  containers:
  - name: nginx
    image: nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-selector-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-selector-app
  template:
    metadata:
      labels:
        app: node-selector-app
    spec:
      nodeSelector:
        env: prod
        region: mumbai
        disktype: ssd
        cpu: high
        memory: "32gb"
        gpu: "true"
        role: database
        purpose: monitoring
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-affinity-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-affinity-app
  template:
    metadata:
      labels:
        app: node-affinity-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:   # OR
            - matchExpressions:  # AND
              - key: env
                operator: In
                values:
                - prod
              - key: region
                operator: In
                values:
                - mumbai
              - key: disktype
                operator: In
                values:
                - ssd
              - key: cpu
                operator: In
                values:
                - high
              - key: memory
                operator: In
                values:
                - "32gb"
              - key: gpu
                operator: In
                values:
                - "true"
              - key: role
                operator: In
                values:
                - database
              - key: purpose
                operator: In
                values:
                - monitoring
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-affinity-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - backend
            topologyKey: kubernetes.io/hostname
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anti-affinity-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - myapp
            topologyKey: kubernetes.io/hostname
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
